<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/softbackground"
    tools:context=".MainActivity"
    tools:ignore="Overdraw">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_text_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/enter_the_key" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_text_key"
        android:layout_margin="20dp"
        android:hint="@string/enter_the_message" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/encrypt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_value"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/gradient"
        android:text="@string/encrypt_the_message"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/decrypt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/encrypt"
        android:layout_margin="20dp"
        android:background="@drawable/gradient"
        android:text="@string/decrypt_the_message"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/decrypt"
        android:layout_margin="20dp"
        android:hint="@string/value" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/developer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/gradient"
        android:text="@string/developer"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>